# framework_dev_c

./: .gitignore  CMakeLists.txt  Readme.md
lib/: CMakeLists.txt  lib_app.c  lib_app.h
src/: CMakeLists.txt  lib_app.c  lib_app.h  main.c
test/: CMakeLists.txt  test_main.c
